--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Plaster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap');
 @import "tailwindcss";
+
+
+@theme{
+    --font-logo:"Plaster", system-ui;
+    --font-heading:"DM Serif Display", system-ui;
+    --font-body:"Google Sans", system-ui;
+    
+}
